Improve code coverage.